--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "@astrojs/svelte": "^4.0.2",
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.1.2",
+    "prettier-plugin-astro": "^0.12.0",
     "svelte": "^4.2.1",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4"
   }
 }
